add Material Tap Target Prompt for agenda

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -123,7 +123,7 @@
     <string name="action_agenda">agenda</string>
     <string name="share_title">Compartir con</string>
     <string name="pick_agenda">Selecciona tu agenda</string>
-
+    <string name="info_agenda">Añadir a tu agenda</string>
 
     <string name="Album">Álbum</string>
     <string name="Single">Single</string>
